update request schema creator
