# api.yaml
@@ -15,59 +15,25 @@ paths:
           application/json:
             schema:
               properties:
-                Email:
+                authors:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      email:
+                        type: string
+                        default: string
+                      name:
+                        type: string
+                        default: string
+                email:
                   type: string
-                Name:
+                name:
                   type: string
               type: object
       responses:
         "200":
           description: Response for status code 200
-          content:
-            application/json:
-              schema:
-                items:
-                  type: object
-                  properties:
-                    Email:
-                      type: string
-                      default: String
-                    ID:
-                      type: number
-                      default: 1
-                    Name:
-                      type: string
-                      default: Author 1
-                    Users:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          ID:
-                            type: number
-                            default: 1
-                          Name:
-                            type: string
-                            default: User 1
-                          Profile:
-                            type: object
-                            properties:
-                              ID:
-                                type: number
-                                default: 1
-                              Name:
-                                type: string
-                                default: Profile 1
-                type: array
-        "300":
-          description: Response for status code 300
-          content:
-            application/json:
-              schema:
-                default: Redirect
-                type: string
-        "400":
-          description: Response for status code 400
           content:
             application/json:
               schema:
@@ -80,7 +46,7 @@ paths:
                         default: String
                       ID:
                         type: number
-                        default: 1
+                        default: "1"
                       Name:
                         type: string
                         default: Author 1
@@ -91,7 +57,7 @@ paths:
                           properties:
                             ID:
                               type: number
-                              default: 1
+                              default: "1"
                             Name:
                               type: string
                               default: User 1
@@ -100,7 +66,7 @@ paths:
                               properties:
                                 ID:
                                   type: number
-                                  default: 1
+                                  default: "1"
                                 Name:
                                   type: string
                                   default: Profile 1
@@ -116,5 +82,102 @@ paths:
                     default: Internal Server Error
                   status_code:
                     type: number
-                    default: 500
+                    default: "500"
                 type: object
+    get:
+      operationId: get
+      tags:
+      - Authors
+      summary: get
+      description: Get list author
+      responses:
+        "200":
+          description: Response for status code 200
+          content:
+            application/json:
+              schema:
+                items:
+                  type: object
+                  properties:
+                    ID:
+                      type: number
+                      default: "1"
+                    Name:
+                      type: string
+                      default: Author 1
+                    Users:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          ID:
+                            type: number
+                            default: "1"
+                          Name:
+                            type: string
+                            default: User 1
+                          Profile:
+                            type: object
+                            properties:
+                              ID:
+                                type: number
+                                default: "1"
+                              Name:
+                                type: string
+                                default: Profile 1
+                    author:
+                      type: object
+                      properties:
+                        ID:
+                          type: number
+                          default: "1"
+                        Name:
+                          type: string
+                          default: Author 1
+                        book:
+                          type: object
+                          properties:
+                            ID:
+                              type: number
+                              default: "1"
+                            Name:
+                              type: string
+                              default: Book 1
+                            category:
+                              type: object
+                              properties:
+                                ID:
+                                  type: number
+                                  default: "1"
+                                Name:
+                                  type: string
+                                  default: Category 1
+                type: array
+        "300":
+          description: Response for status code 300
+          content:
+            application/json:
+              schema:
+                default: Redirect
+                type: string
+        "500":
+          description: Response for status code 500
+          content:
+            application/json:
+              schema:
+                properties:
+                  error:
+                    type: string
+                    default: Internal Server Error
+                  status_code:
+                    type: number
+                    default: "500"
+                type: object
+      parameters:
+      - description: Limit
+        in: query
+        name: limit
+        required: false
+        schema:
+          default: 10
+          type: integer
